[package]
name = "minhook"
description = "A function hooking library for the Rust programming language"
version = "0.1.0"
authors = ["Jascha Neutelings"]
repository = "https://github.com/Jascha-N/minhook-rs"
license = "BSD-2-Clause"
readme = "README.md"
links = "MinHook"
build = "build.rs"

[dependencies]
kernel32-sys = "0.2"
libc = "0.2"
winapi = "0.2"

[dependencies.lazy_static]
version = "0.2"
features = ["nightly"]

[build-dependencies]
gcc = "0.3"

[features]
increased_arity = []